--- a/blood.html
+++ b/blood.html
@@ -131,7 +131,7 @@
             </div>
           </div>
         </form>
-        <div class="donor_table">
+        <div class="donor_table table-responsive">
           <table class="table table-bordered">
             <tr>
               <th>Card No</th>
@@ -164,7 +164,7 @@
 
 <!-- Footer section start -->
   <footer>
-      <p>Copyright &copy; 2021 | All right reserved by CMH</p>
+      <p>Copyright &copy; 2021 | All right reserved by DUWT</p>
   </footer>
 <!-- Footer section end -->
 
