--- a/contact.html
+++ b/contact.html
@@ -102,8 +102,8 @@
           <h3>Our Contact Info</h3>
           <h5>Dhaka University Web Team</h5>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur in nesciunt suscipit perspiciatis, quisquam neque laborum quaerat nihil eveniet necessitatibus aliquid sed facilis et molestias, impedit accusantium voluptates praesentium, ullam.</p>
-          <p>Momtaz Plaza (4th floor) (Opposite of Labaid Hospital)</p>
-          <p>House#7, Road#4 Dhanmondi</p>
+          <p>XYZ Plaza (4th floor) (Opposite of XYZ Hospital)</p>
+          <p>House#xyz, Road#xyz Dhanmondi</p>
           <p>Dhaka Bangladesh</p>
         </div>
       </div>
@@ -125,7 +125,7 @@
 
 <!-- Footer section start -->
   <footer>
-      <p>Copyright &copy; 2021 | All right reserved by CMH</p>
+      <p>Copyright &copy; 2021 | All right reserved by DUWT</p>
   </footer>
 <!-- Footer section end -->
 
