--- a/plan.html
+++ b/plan.html
@@ -352,7 +352,7 @@
 
 <!-- Footer section start -->
   <footer>
-      <p>Copyright &copy; 2021 | All right reserved by CMH</p>
+      <p>Copyright &copy; 2021 | All right reserved by DUWT</p>
   </footer>
 <!-- Footer section end -->
 
